# termux-browser-pilot

./: .gitignore  .mcp.json  LICENSE  README.md  cli.py  pyproject.toml  setup.sh  start_browser.sh
src/: __init__.py  _utils.py  accessibility.py  agent.py  browser.py  cdp.py  client.py  cloudflare.py  commands.py  cookies.py  daemon.py  device.py  gpu.py  input.py  lock.py  mcp_server.py  native.py  network.py  pilot.py  screenshot.py  stealth.py  tool_registry.py
tests/: test_basic.py  test_native_fp.py  test_nowsecure.py  test_sannysoft.py  test_webgl.py
